[project]
name = "ty-reproducer"
version = "0.1.0"
description = "Reproduce ty user issues using claude code"
authors = [
    { name = "David Peter", email = "mail@david-peter.de" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
reproduce = "ty_reproducer:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
